# Bioformats-C-Wrapper

./: CMakeLists.txt  README.md
src/: BioFormatsWrapper.java  main.cpp
